removing sample file upload code (#137)
* removing sample file upload code

* [ci skip] auto patch increment
skip-checks: true

* removed ingest method
