# openapi.yaml
@@ -192,89 +192,7 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         '404':
           $ref: '#/components/responses/NotFoundError'
-  /samples/type/fileupload:
-    post:
-      summary: Upload Sample file
-      description: | 
-        POST CollectionExerciseJob associated to SampleSummary surveyRef and exerciseDateTime
-      tags:
-        - samples
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                file:
-                  type: string
-                  format: binary
-      responses:
-        '201':
-          description: The sample file has been uploaded
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  description:
-                    type: string
-                    example: example description
-                  expectedCollectionInstruments:
-                    type: integer
-                    example: 1
-                  id:
-                    type: string
-                    format: uuid
-                    example: fd6a1aa3-ba17-43a8-beae-a39e67c6444d
-                  ingestDateTime:
-                    type: object
-                    properties:
-                      date:
-                        type: integer
-                        example: 1
-                      day:
-                        type: integer
-                        example: 31
-                      hours: 
-                        type: integer
-                        example: 0
-                      minutes:
-                        type: integer
-                        example: 59
-                      month:
-                        type: integer
-                        example: 12
-                      nanos:
-                        type: integer
-                        example: 1234
-                      seconds:
-                        type: integer
-                        example: 1
-                      time:
-                        type: integer
-                        example: 1
-                      timezoneOffset:
-                        type: integer
-                        example: 0
-                      year:
-                        type: integer
-                        example: 2020
-                  notes:
-                    type: string
-                    example: note
-                  state:
-                    type: string
-                    enum: [ACTIVE, INIT, FAILED]
-                    example: ACTIVE
-                  totalSampleUnits:
-                    type: integer
-                    example: 0
-        '400':
-          description: invalid request or validation failed
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-  
+
 components:
   securitySchemes:
     basicAuth:
